--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-090-027-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-027"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-04T10:24:16.568Z" type="text-version" status="0.0.11" xml:id="UT22084-090-027-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:44:42.875Z" type="translation-status" status="2.a" xml:id="UT22084-090-027-27">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:44:42.875Z" type="text-version" status="0.0.12" xml:id="UT22084-090-027-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
