--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" xml:id="UT22084-090-028-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-028"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-04T10:25:13.699Z" type="text-version" status="0.0.11" xml:id="UT22084-090-028-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:46:46.222Z" type="translation-status" status="2.a" xml:id="UT22084-090-028-27">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T13:46:46.222Z" type="text-version" status="0.0.12" xml:id="UT22084-090-028-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
