--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-010-26">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +104,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-26T15:43:09.02Z" type="text-version" status="0.0.13" xml:id="UT22084-088-010-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T14:49:32.625Z" type="translation-status" status="2.d" xml:id="UT22084-088-010-30">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T14:49:32.625Z" type="text-version" status="0.0.14" xml:id="UT22084-088-010-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
