--- a/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
+++ b/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
@@ -4,22 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pas zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Brahmaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of Brahmā</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Brahmaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryabrahma­paripṛcchā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" xml:id="UT22084-059-001-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-059-001-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-059-001-2">ErdeneBaatar Erdene-Ochir</author>
                 <author role="translatorEng" xml:id="UT22084-059-001-3">Jed Forman</author>
                 <consultant role="projectManager" xml:id="UT22084-059-001-4">Jed Forman</consultant>
+                <editor role="projectEditor" xml:id="UT22084-059-001-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-059-001"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T15:31:10.322Z" type="text-version" status="0.0.7" xml:id="UT22084-059-001-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T15:31:39.932Z" type="text-version" status="0.0.8" xml:id="UT22084-059-001-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:00:25.77Z" type="translation-status" status="2.f" xml:id="UT22084-059-001-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:00:25.77Z" type="text-version" status="0.0.9" xml:id="UT22084-059-001-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
