--- a/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
+++ b/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
@@ -9,16 +9,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo gtsug tor rol pa'i tan+tra/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīdevyuṣṇīṣalalitatantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo gtsug tor rol pa'i tan+tra/</title>
-                <author role="translatorMain" xml:id="UT22084-101-042-1"/>
+                <author role="translatorMain" xml:id="UT22084-101-042-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-101-042-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-101-042-14">Ryan Damron</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-101-042"/>
                 <date/>
             </publicationStmt>
@@ -60,6 +61,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-15T15:10:56.206Z" type="text-version" status="0.0.6" xml:id="UT22084-101-042-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-15T15:11:39.351Z" type="text-version" status="0.0.7" xml:id="UT22084-101-042-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:08:31.724Z" type="translation-status" status="2.f" xml:id="UT22084-101-042-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:08:31.724Z" type="text-version" status="0.0.8" xml:id="UT22084-101-042-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
