--- a/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
+++ b/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
@@ -4,20 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mi rgod rnam par 'joms pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Cauravidhvaṃsanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Triumphing Over Bandits</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi rgod rnam par 'joms pa zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Cauravidhvaṃsanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mi rgod rnam par 'joms pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacauravidhvaṃsanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi rgod rnam par 'joms pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryacauravidhvaṃsanīnāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-091-026-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-091-026-5">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-026"/>
             </publicationStmt>
             <sourceDesc>
@@ -51,6 +51,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:30:20.699Z" type="text-version" status="0.0.1" xml:id="UT22084-091-026-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:30:58.958Z" type="text-version" status="0.0.2" xml:id="UT22084-091-026-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:14:01.334Z" type="translation-status" status="2.h" xml:id="UT22084-091-026-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:14:01.334Z" type="text-version" status="0.0.3" xml:id="UT22084-091-026-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
