--- a/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
+++ b/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
@@ -4,23 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phyag rdor gos sngon can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Nīlāmbaradharavajrapāṇi­kalpa­dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Blue-clad Vajrapāṇi</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can gyi cho ga zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Nīlāmbaradharavajrapāṇi­kalpa­dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyag rdor gos sngon can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">lag na rdo rje gos sngon can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Nīlāmbaradharavajrapāṇi­kalpadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">lag na rdo rje gos sngon can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can gyi cho ga zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-095-003-5">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-095-003-6">Bruno Galasek-Hul</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-095-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -55,6 +55,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:31:36.32Z" type="text-version" status="0.0.4" xml:id="UT22084-095-003-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:50:34.601Z" type="text-version" status="0.0.5" xml:id="UT22084-095-003-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:18:22.585Z" type="translation-status" status="2.h" xml:id="UT22084-095-003-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T15:18:22.585Z" type="text-version" status="0.0.6" xml:id="UT22084-095-003-9">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
