--- a/translations/kangyur/placeholders/088-004_toh510,982-the_incantation_of_the_pure_stainless_light.xml
+++ b/translations/kangyur/placeholders/088-004_toh510,982-the_incantation_of_the_pure_stainless_light.xml
@@ -5,26 +5,27 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Pure Stainless Light</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">raśmivimalaviśuddhaprabhādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Raśmivimalaviśuddhaprabhādhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'od zer dri ma med pa rnam par dag pa'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaraśmivimala­viśuddhaprabhā­nāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaraśmivimalaviśuddha­prabhā­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaraśmivimala­viśuddhaprabhā­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaraśmivimalaviśuddha­prabhā­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'od zer dri ma med pa rnam par dag pa'i 'od kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'od zer dri ma med pa rnam par dag pa'i 'od ces bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-81"/>
-                <consultant role="projectManager" ref="eft:person-402">William McGrath</consultant>
-                <author role="translatorEng" ref="eft:person-402">William McGrath</author>
-                <author role="translatorEng" ref="eft:person-403">Catherine Cao</author>
-                <editor role="reviser" ref="eft:person-402">William McGrath</editor>
-                <editor role="reviser" ref="eft:person-403">Catherine Cao</editor>
-                <editor role="proofreader" ref="eft:person-403">Catherine Cao</editor>
-                <editor role="proofreader" ref="eft:person-402">William McGrath</editor>
+                <author role="translatorMain" xml:id="UT22084-088-004-1"/>
+                <consultant role="projectManager" xml:id="UT22084-088-004-2">William McGrath</consultant>
+                <author role="translatorEng" xml:id="UT22084-088-004-3">William McGrath</author>
+                <author role="translatorEng" xml:id="UT22084-088-004-4">Catherine Cao</author>
+                <editor role="reviser" xml:id="UT22084-088-004-5">William McGrath</editor>
+                <editor role="reviser" xml:id="UT22084-088-004-6">Catherine Cao</editor>
+                <editor role="proofreader" xml:id="UT22084-088-004-7">Catherine Cao</editor>
+                <editor role="proofreader" xml:id="UT22084-088-004-8">William McGrath</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-004"/>
                 <date/>
             </publicationStmt>
@@ -32,8 +33,8 @@
                 <bibl key="toh510" type="text">
                     <ref>Toh 510</ref>
                     <biblScope>vol.88, ff.8r-18v(pp.15-36)</biblScope>
-                    <location work="UT4CZ5369" count-pages="22">
-                        <volume number="88" start-page="15" end-page="36"/>
+                    <location work="UT4CZ5369" count-pages="21">
+                        <volume number="88" start-page="50" end-page="70"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12232" work="W22084"/>
@@ -48,9 +49,39 @@
                     <idno source-id="O1JC114941JC12745" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T09:44:51.312Z" user="admin">14/09/2022 09:44:51</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:48:53.382Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:48:53.382Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:51:22.521Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T12:51:22.521Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T12:51:57.992Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:53:36.199Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:44:43.257Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T09:44:43.257Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-03-08T09:48:53.382Z" type="translation-status" status="4" xml:id="UT22084-088-004-9">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:48:53.382Z" type="text-version" status="0.0.1" xml:id="UT22084-088-004-10">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:51:22.521Z" type="translation-status" status="3" xml:id="UT22084-088-004-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:51:22.521Z" type="text-version" status="0.0.2" xml:id="UT22084-088-004-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:51:57.992Z" type="text-version" status="0.0.3" xml:id="UT22084-088-004-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:53:36.199Z" type="text-version" status="0.0.4" xml:id="UT22084-088-004-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:44:43.257Z" type="translation-status" status="2.h" xml:id="UT22084-088-004-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:44:43.257Z" type="text-version" status="0.0.5" xml:id="UT22084-088-004-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-088-004-17">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-28T06:39:43.737Z" type="text-version" status="0.0.7" xml:id="UT22084-088-004-18">
+                    <desc>Updated page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
