--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -14,9 +14,10 @@
                 <author role="translatorEng" xml:id="UT22084-088-010-3">Péter-Dániel Szántó</author>
                 <consultant role="projectManager" xml:id="UT22084-088-010-4">Péter-Dániel Szántó</consultant>
                 <editor role="projectEditor" xml:id="UT22084-088-010-26">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-010-37">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -29,7 +30,7 @@
                     <ref>Toh 516</ref>
                     <biblScope>vol.88, ff.31r-33vpp.61-66)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="88" start-page="61" end-page="66"/>
+                        <volume number="88" start-page="95" end-page="100"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12238" work="W22084"/>
@@ -111,6 +112,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-27T14:49:32.625Z" type="text-version" status="0.0.14" xml:id="UT22084-088-010-31">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-27T14:50:12.539Z" type="text-version" status="0.0.15" xml:id="UT22084-088-010-38">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-03-28T06:41:57.771Z" type="text-version" status="0.0.16" xml:id="UT22084-088-010-39">
+                    <desc>Updated vol. 88 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
