--- a/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
+++ b/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dri med gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vimaladhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Stainless</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vimaladhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dri med gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavimalanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dri ma med pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryavimalanāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dri ma med pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryavimalanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-011-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-011-2">Gergely Hidas</author>
+                <author role="translatorEng" xml:id="UT22084-088-011-3">Péter-Dániel Szántó</author>
+                <consultant role="projectManager" xml:id="UT22084-088-011-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-088-011"/>
                 <date/>
             </publicationStmt>
@@ -25,7 +28,7 @@
                     <ref>Toh 517</ref>
                     <biblScope>vol.88, ff.33v-37r(pp.66-73)</biblScope>
                     <location work="UT4CZ5369" count-pages="8">
-                        <volume number="88" start-page="66" end-page="73"/>
+                        <volume number="88" start-page="100" end-page="107"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12239" work="W22084"/>
@@ -40,9 +43,36 @@
                     <idno source-id="O1JC114941JC12633" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T10:55:27.925Z" user="admin">24/07/2023 10:55:27</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:24:36.303Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:24:36.303Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T10:55:23.681Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T10:55:23.681Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-06-30T11:24:36.303Z" type="translation-status" status="4" xml:id="UT22084-088-011-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:24:36.303Z" type="text-version" status="0.0.1" xml:id="UT22084-088-011-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:55:23.681Z" type="translation-status" status="3" xml:id="UT22084-088-011-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:55:23.681Z" type="text-version" status="0.0.2" xml:id="UT22084-088-011-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:55:59.122Z" type="text-version" status="0.0.3" xml:id="UT22084-088-011-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T10:56:16.78Z" type="text-version" status="0.0.4" xml:id="UT22084-088-011-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:20:58.894Z" type="text-version" status="0.0.5" xml:id="UT22084-088-011-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-088-011-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-28T06:49:44.294Z" type="text-version" status="0.0.7" xml:id="UT22084-088-011-13">
+                    <desc>Updated vol. 88 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
