--- a/translations/kangyur/placeholders/096-006_toh757,947-the_sutra_of_great_strength.xml
+++ b/translations/kangyur/placeholders/096-006_toh757,947-the_sutra_of_great_strength.xml
@@ -5,21 +5,22 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">stobs po che'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahābalasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mahābalasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Great Strength</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa stobs po che zhes bya ba theg pa chen po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahābalanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahābalanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa stobs po che zhes bya ba theg pa chen po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahābalanāmamahāyānasūtra</title>
-                <author ref="contributors.xml#team-9" role="translatorMain"/>
-            <author role="translatorEng" ref="contributors.xml#person-312">Nick Schmidt</author>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahābalanāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-096-006-1"/>
+            <author role="translatorEng" xml:id="UT22084-096-006-2">Nick Schmidt</author>
+    <consultant role="projectManager" xml:id="UT22084-096-006-3">Dr. Andreas Doctor</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-006"/>
                 <date/>
             </publicationStmt>
@@ -37,17 +38,30 @@
                     <ref>Toh 947</ref>
                     <biblScope>vol.101, ff.30v-41r(pp.60-81)</biblScope>
                     <location work="UT4CZ5369" count-pages="22">
-                        <volume number="101" start-page="60" end-page="81"/>
+                        <volume number="102" start-page="60" end-page="81"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12710" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-09T10:05:40.162Z" user="admin">09/03/2023 10:05:40</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T12:25:11.308Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-09T10:05:34.507Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-09T10:05:34.507Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-04-22T12:25:11.308Z" type="text-version" status="0.0.1" xml:id="UT22084-096-006-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-09T10:05:34.507Z" type="translation-status" status="2.h" xml:id="UT22084-096-006-5">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-09T10:05:34.507Z" type="text-version" status="0.0.2" xml:id="UT22084-096-006-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-096-006-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-28T08:40:49.027Z" type="text-version" status="0.0.4" xml:id="UT22084-096-006-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
