--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -38,7 +38,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="2">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -50,7 +50,7 @@
         <idno xml:id="UT22084-034-025"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2024-03-28</date>
+        <date>2023-11-09</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh37" type="text">
@@ -168,6 +168,12 @@
                 </change>
                 <change who="#martina-cotter" when="2024-03-28T15:16:56.286Z" type="text-version" status="1.0.0" xml:id="UT22084-034-025-1196">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#john" when="2024-03-28T19:46:38.816Z" type="translation-status" status="2" xml:id="UT22084-034-025-1221">
+                    <desc>2</desc>
+                </change>
+                <change who="#john" when="2024-03-28T19:46:38.816Z" type="text-version" status="0.0.8" xml:id="UT22084-034-025-1222">
+                    <desc>Further edits esp. to glossary, now ready for publication.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -545,9 +551,10 @@
                 animals in this list have in common is that they are all hunted or killed by humans
                 for different reasons. </note>
                         </l>
-            <l>Is the evil plight from having killed.”</l>
+            <l>Is the harm that ensues from having killed.”</l>
             </lg>
-          <p tid="126">This is the karmic result of killing. </p>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1119"/>
+          <p tid="126">This is the karmic fruition of killing. </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-121"/>
           <lg tid="40">
             <l>“Those who refrain from killing</l>
@@ -652,9 +659,10 @@
                         </l>
             <l>Ugliness and misery,</l>
             <l>And birth in a low social status</l>
-            <l>Are the evil plights from having stolen.”</l>
+            <l>Are the harms that ensue from having stolen.”</l>
             </lg>
-          <p tid="128">These are the karmic result of stealing.</p>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1138"/>
+          <p tid="128">This is the karmic fruition of stealing.</p>
           <milestone unit="chunk" xml:id="UT22084-034-025-139"/>
           <lg tid="52">
             <l>“Those who refrain from stealing</l>
@@ -771,7 +779,7 @@
             <l>“For five hundred lives, they will be reborn as women, </l>
             <l>And likewise as paṇḍakas. </l>
             <l>Again and again, they will be repugnant lepers.</l>
-            <l>These are their evil plights from sexual misconduct.</l>
+            <l>These are the harms that ensue from from sexual misconduct.</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-034-025-162"/>
           <p tid="66">“They will experience misfortune over many lifetimes. They will have many
@@ -791,11 +799,14 @@
               “clarity” and (2) “faith,” “joy,” etc. “Unhappy” or “dissatisfied” has already been
               expressed two sentences prior: <foreign xml:lang="Bo-Ltn" type="quote">rtag tu sems mi
                 dga’ bar ’gyur ba dang</foreign>.</note>
-          </p>
+                    </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-165"/>
-          <p tid="67">“After the destruction of the body, after death, they will fall and be reborn
+          <p tid="131">“After the destruction of the body, after death, they will fall and be reborn
             in the Loud Wailing Hell. There, they will experience terrible, harsh, and intense
-            suffering. This is the karmic fruition of sexual misconduct. </p>
+            suffering. </p>
+          <lb/>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1165"/>
+          <p tid="132">This is the karmic fruition of sexual misconduct. </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-166"/>
           <lg tid="68">
             <l>“Those who refrain from sexual misconduct<note place="end" xml:id="UT22084-034-025-167"> Reading <foreign xml:lang="Bo-Ltn">spangs ba
@@ -929,8 +940,9 @@
             <l>“A putrid stench arises from their mouths,</l>
             <l>The bad smell spreading for a yojana.</l>
             <l>They will not know the Dharma.</l>
-            <l>This is their evil plight from having lied.”</l>
+            <l>These are the harms that ensue from having lied.”</l>
             </lg>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1190"/>
           <p tid="130">This is the karmic fruition of lying. </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-191"/>
           <lg tid="84">
@@ -1060,10 +1072,13 @@
             with no sense of decency, and will have poor discernment. They will be unaware of
             virtuous qualities, and for five hundred lives they will be reborn as yakṣas, for
             another five hundred as dogs, and they will forever thereafter be reborn as lunatics.
-            These are their evil plights from having consumed alcohol. This is the karmic fruition of drinking
+            These are the harms that ensue from having consumed alcohol. </p>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1220"/>
+          <lb/>
+          <p tid="133">This is the karmic fruition of drinking
             alcohol that leads to intoxication. </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-220"/>
-          <lg tid="96">
+          <lg tid="134">
             <l>“Those who refrain from drinking alcohol</l>
             <l>Will be reborn as a man or a woman</l>
             <l>And the benefits they then will reap</l>
