--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -38,7 +38,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -174,6 +174,12 @@
                 </change>
                 <change who="#john" when="2024-03-28T19:46:38.816Z" type="text-version" status="0.0.8" xml:id="UT22084-034-025-1222">
                     <desc>Further edits esp. to glossary, now ready for publication.</desc>
+                </change>
+                <change who="#john" when="2024-03-28T19:55:34.891Z" type="translation-status" status="1.a" xml:id="UT22084-034-025-1223">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#john" when="2024-03-28T19:55:34.891Z" type="text-version" status="1.0.1" xml:id="UT22084-034-025-1224">
+                    <desc>Small edits to version published earlier today.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
