--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -180,6 +180,9 @@
                 </change>
                 <change who="#john" when="2024-03-28T19:55:34.891Z" type="text-version" status="1.0.1" xml:id="UT22084-034-025-1224">
                     <desc>Small edits to version published earlier today.</desc>
+                </change>
+                <change who="#john" when="2024-03-28T20:07:02.18Z" type="text-version" status="1.0.2" xml:id="UT22084-034-025-1225">
+                    <desc>Typo corrected</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -809,7 +812,7 @@
           <milestone unit="chunk" xml:id="UT22084-034-025-165"/>
           <p tid="131">“After the destruction of the body, after death, they will fall and be reborn
             in the Loud Wailing Hell. There, they will experience terrible, harsh, and intense
-            suffering. </p>
+            suffering.” </p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-034-025-1165"/>
           <p tid="132">This is the karmic fruition of sexual misconduct. </p>
